--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest",
+    "test": "jest --detectOpenHandles --forceExit",
     "test:watch": "jest --watch"
   },
   "lint-staged": {
     "*.js": [
       "eslint . --fix",
-      "jest",
+      "jest --detectOpenHandles --forceExit",
       "git add ."
     ]
   },
@@ -32,6 +32,9 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
+    "mongoose": "^5.9.25",
     "morgan": "~1.9.1",
     "yaml": "^1.10.0"
   },
