Completed remaining route and test cases  1. Added all test cases  2. Added route for deleting the user

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -219,7 +219,7 @@ rules:
     - error
     - single
   radix: error
-  require-atomic-updates: error
+  require-atomic-updates: off
   require-await: error
   require-jsdoc: error
   require-unicode-regexp: off
