Completed documentation   1. Added content to README.md about the project   2. Changed config file to take input from environment variables   3. Added env variable to docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
-version: '3.2'
+version: '3.8'
 
 services:
   bus_tickets:
     image: grokkertech/bus_tickets
     ports:
       - "3000:3000"
+    environment:
+      - "CONFIG__MONGODB__URI=http://mongodb:27017"
+
   mongodb:
     image: mongo
     ports:
